fix: collapse dropdown on increasing window size (#45)

--- a/main.css
+++ b/main.css
@@ -129,6 +129,9 @@ h3 {
 	padding-bottom: 235px;
 }
 
+.hidden{
+	display: none;
+}
 
 .logo img {
 	height: 30px;
